added function to display JSON in grid

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>JSON</title>
+  <div id="header"></div>
   
 </head>
 
 <body>
 
   <div id="root"></div>
+   <div id="detail"></div>
 
   <script src="script.js"></script>
 </body>
